remove passengerIdDto, update logic, update service